fix line wrap for collection name

--- a/src/Views/Project/Canvas/Charts/FileExplorer/index.module.scss
+++ b/src/Views/Project/Canvas/Charts/FileExplorer/index.module.scss
@@ -129,6 +129,7 @@
       .ant-tree-treenode-switcher-open,
       .ant-tree-treenode-switcher-close {
         margin-left: 12px;
+        white-space: nowrap;
 
         .ant-tree-node-content-wrapper {
           margin-left: 21px;
